# polysemy-nix-skeleton

./: README.md  project1.cabal  release.nix  shell.nix
nix/lib/: generic-deriving.nix  polysemy-plugin.nix  polysemy.nix  th-abstraction.nix  th-lift.nix
src/: Main.hs
